<resources>
    <string name="app_name">New City Time Trial Timing</string>
    <string name="newEventButtonText">New Event</string>
    <string name="title_activity_manage_riders">Manage Riders</string>
    <string name="title_activity_new_event">Create New Event</string>
    <string name="AddRiderButtonText">New Rider</string>
    <string name="FirstNameString">First Name</string>
    <string name="LastNameString">Last Name</string>
    <string name="AddNewRiderString">Add New Rider</string>
    <string name="BeepBtnText">Beep!</string>
    <string name="riderNumber">Rider Number</string>
    <string name="AddNewRider">Add New Rider</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="initialTimeZero">00:00:00</string>
    <string name="StartButtonText">Start</string>
    <string name="StopButtonText">Stop</string>
    <string name="startEventButtonText">Start Event</string>
    <string name="addRiderButtonText">Add Rider</string>
    <string name="minutesText">Minutes</string>
    <string name="secondsText">Seconds</string>
    <string name="title_activity_race_results">RaceResultsActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="RiderIdMessage">com.nglessner.timetrial.riderIdMessage</string>
</resources>
