<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.nglessner.timetrial.AddNewRiderActivity">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/FirstNameString"
        android:maxLines="1"
        android:lines="1"
        android:ellipsize="end"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/firstNameEditText" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/LastNameString"
        android:lines="1"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_below="@+id/firstNameEditText"
        android:layout_alignParentStart="true"
        android:id="@+id/lastNameEditText" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/riderNumber"
        android:ems="10"
        android:id="@+id/riderNumberEditText"
        android:layout_below="@+id/lastNameEditText"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AddNewRiderString"
        android:onClick="addRider"
        android:id="@+id/addRiderSubmit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/minutePicker"
        android:layout_below="@+id/riderNumberEditText"
        android:layout_marginTop="32dp"
        android:layout_marginStart="60dp"/>

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/secondPicker"
        android:layout_alignTop="@+id/minutePicker"
        android:layout_toEndOf="@+id/minutePicker" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutesText"
        android:id="@+id/textView"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:layout_above="@+id/secondPicker"
        android:layout_alignStart="@+id/minutePicker"
        android:layout_alignTop="@+id/textView2"
        android:layout_toStartOf="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondsText"
        android:id="@+id/textView2"
        android:textAlignment="center"
        android:layout_above="@+id/secondPicker"
        android:layout_alignStart="@+id/secondPicker"
        android:layout_alignEnd="@+id/secondPicker" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enter personal record in Min/Sec"
        android:id="@+id/textView3"
        android:layout_alignTop="@+id/minutePicker"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/textView"
        android:layout_alignBottom="@+id/minutePicker" />


</RelativeLayout>
