<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:screenOrientation="portrait"
    tools:context="com.nglessner.timetrial.EventActivity">

    <TextView android:text="@string/initialTimeZero" android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:id="@+id/countDownText"
        android:textStyle="bold" />

    <Button
    android:text="@string/StartButtonText"
    android:layout_width="160dp"
    android:layout_height="50dp"
    android:onClick="countDownStart"
    android:layout_marginTop="10dp"
    android:layout_below="@+id/countDownText"
    android:id="@+id/countDownStart">
</Button>

    <Button
        android:text="@string/StopButtonText"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:onClick="countDownStop"
        android:id="@+id/countDownStop"
        android:layout_alignTop="@+id/countDownStart"
        android:layout_alignEnd="@+id/countDownText">
    </Button>

</RelativeLayout>
